tests/baselines/reference/tsxSpreadAttributesResolution2.errors.txt
tests/cases/conformance/jsx/file.tsx(20,10): error TS2739: Type '{}' is missing the following properties from type 'PoisonedProp': x, y
tests/cases/conformance/jsx/file.tsx(21,10): error TS2739: Type '{}' is missing the following properties from type 'PoisonedProp': x, y
tests/cases/conformance/jsx/file.tsx(22,19): error TS2322: Type 'true' is not assignable to type 'string'.
tests/cases/conformance/jsx/file.tsx(22,21): error TS2322: Type 'true' is not assignable to type '"2"'.
tests/cases/conformance/jsx/file.tsx(23,10): error TS2322: Type '{ x: number; y: "2"; }' is not assignable to type 'PoisonedProp'.
  Types of property 'x' are incompatible.
    Type 'number' is not assignable to type 'string'.
tests/cases/conformance/jsx/file.tsx(24,11): error TS2322: Type '{ X: string; x: number; y: "2"; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<Poisoned> & PoisonedProp & { children?: ReactNode; }'.
  Property 'X' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<Poisoned> & PoisonedProp & { children?: ReactNode; }'.


==== tests/cases/conformance/jsx/file.tsx (6 errors) ====
    import React = require('react');
    
    interface PoisonedProp {
        x: string;
        y: "2";
    }
    
    class Poisoned extends React.Component<PoisonedProp, {}> {
        render() {
            return <div>Hello</div>;
        }
    }
    
    const obj = {};
    
    // OK
    <Poisoned {...{x: "ok", y: "2"}} />;
    
    // Error
    let p = <Poisoned {...obj} />;
             ~~~~~~~~
!!! error TS2739: Type '{}' is missing the following properties from type 'PoisonedProp': x, y
    let y = <Poisoned />;
             ~~~~~~~~
!!! error TS2739: Type '{}' is missing the following properties from type 'PoisonedProp': x, y
    let z = <Poisoned x y/>;
                      ~
!!! error TS2322: Type 'true' is not assignable to type 'string'.
!!! related TS6500 tests/cases/conformance/jsx/file.tsx:4:5: The expected type comes from property 'x' which is declared here on type 'IntrinsicAttributes & IntrinsicClassAttributes<Poisoned> & PoisonedProp & { children?: ReactNode; }'
                        ~
!!! error TS2322: Type 'true' is not assignable to type '"2"'.
!!! related TS6500 tests/cases/conformance/jsx/file.tsx:5:5: The expected type comes from property 'y' which is declared here on type 'IntrinsicAttributes & IntrinsicClassAttributes<Poisoned> & PoisonedProp & { children?: ReactNode; }'
    let w = <Poisoned {...{x: 5, y: "2"}}/>;
             ~~~~~~~~
!!! error TS2322: Type '{ {|x|0|}: number; {|y|1|}: "2"; }' is not assignable to type '{|PoisonedProp|2|}'.
!!! error TS2322:   Types of property 'x' are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/conformance/jsx/file.tsx:23:24
!!! annotated symbol 1 tests/cases/conformance/jsx/file.tsx:23:30
!!! annotated symbol 2 tests/cases/conformance/jsx/file.tsx:3:11
    let w1 = <Poisoned {...{x: 5, y: "2"}} X="hi" />;
              ~~~~~~~~
!!! error TS2322: Type '{ {|X|0|}: string; {|x|1|}: number; {|y|2|}: "2"; }' is not assignable to type '{|IntrinsicAttributes|3|} & {|IntrinsicClassAttributes|4|}<{|Poisoned|5|}> & {|PoisonedProp|6|} & { {|children|7|}?: {|ReactNode|8|}; }'.
!!! error TS2322:   Property 'X' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<Poisoned> & PoisonedProp & { children?: ReactNode; }'.
!!! annotated symbol 0 tests/cases/conformance/jsx/file.tsx:24:40
!!! annotated symbol 1 tests/cases/conformance/jsx/file.tsx:24:25
!!! annotated symbol 2 tests/cases/conformance/jsx/file.tsx:24:31
!!! annotated symbol 3 /.lib/react.d.ts:2367:15
!!! annotated symbol 4 /.lib/react.d.ts:2369:15
!!! annotated symbol 5 tests/cases/conformance/jsx/file.tsx:8:7
!!! annotated symbol 6 tests/cases/conformance/jsx/file.tsx:3:11
!!! annotated symbol 7 /.lib/react.d.ts:175:22
!!! annotated symbol 8 /.lib/react.d.ts:93:10